--- a/rotate3.html
+++ b/rotate3.html
@@ -17,10 +17,12 @@
 			  width: 150px;
 			  height: 150px;
 			  perspective: 1000px;
+			 
 			}
 
 			.flip-card-inner {
 			  position: relative;
+			  
 			  width: 100%;
 			  height: 100%;
 			  text-align: center;
@@ -55,7 +57,7 @@
 			  transform: rotateX(-180deg);
 			}
 			
-			.buttom
+			.back
 			{
 				position: absolute;
 				background-color: blue;
@@ -84,11 +86,13 @@
 					4
 				</div>
 			</div>
-			<div class="back">
+		  </div>
+		  <div class="flip-card-inner">
+			  <div class="back">
 				<div class="countContentDiv">
 					5
 				</div>
-			</div>
+			  </div>
 		  </div>
 		</div>
 
