change http to https

--- a/rotate.html
+++ b/rotate.html
@@ -70,7 +70,7 @@
 				to {transform: rotateX(0deg);}
 			}
 		</style>
-		<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 		<script>
 			function toggle0To90(id)
 			{
