--- a/clock1.html
+++ b/clock1.html
@@ -122,7 +122,7 @@
 				transform: rotateX(90deg);
 			}
 		</style>
-		<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 		<script>
 			class Clock
 			{
