--- a/counter0.html
+++ b/counter0.html
@@ -69,7 +69,7 @@
 				to {transform: rotateX(0deg);}
 			}
 		</style>
-		<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 		<script>
 			function start()
 			{
