--- a/counter1.5.html
+++ b/counter1.5.html
@@ -77,7 +77,7 @@
 				transform: rotateX(-90deg);
 			}
 		</style>
-		<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 		<script>
 			var counter;
 			
