--- a/counter1.html
+++ b/counter1.html
@@ -75,7 +75,7 @@
 				to {transform: rotateX(0deg);}
 			}
 		</style>
-		<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 		<script>
 			var state="f";
 			function start()
