--- a/counter3.html
+++ b/counter3.html
@@ -101,7 +101,7 @@
 				z-index:1;
 			}
 		</style>
-		<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+		<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 		<script>
 			function start(theButton)
 			{
