--- a/counter6.3.html
+++ b/counter6.3.html
@@ -117,7 +117,7 @@
 				z-index:1;
 			}			
 		</style>
-				<script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+				<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 		<script>
 			var showCardList={};
 			var hiddenCardList={};
