--- a/counter7.7.html
+++ b/counter7.7.html
@@ -14,10 +14,9 @@
 			  width: 100%;
 			  position: absolute;
 			  
-			  display: flex;
-			  justify-content: center;
-			  align-items: center;			  
-			  transform-style: preserve-3d;
+			  align-items:inherit;
+			  display:inherit;
+			  justify-content:inherit;
 			}
 		
 			.fullCard-after::after,
@@ -61,6 +60,10 @@
 			  height: 150px;
 			  position: relative;
 			  			  
+			  align-items: center;
+			  display:flex;
+			  justify-content: center;			  
+			  transform-style: preserve-3d;			  
 			}
 
 			.rotate0to90 {
